<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello iEatAndroid!</string>
    <string name="app_name">iEat</string>
    <string name="group_list_title">Group List</string>
    <string name="group_info_layout_title">Group Info</string>
    <string name="restaurant_info_layout_title">Introduction to Restaurant</string>
    <string name="group_info_tab_label">Group Info</string>
    <string name="group_analysis_tab_label">Analysis Info</string>
    <string name="group_analysis_title">Analysis Info</string>
    <string name="buy_command">Buy</string>
    <string name="create_group_button_label">+Create My Group</string>
    <string name="my_group_list_label">My Groups</string>
    <string name="my_group_list_empty_reminder">No group is about you</string>
    <string name="active_group_list_label">Available Groups</string>
    <string name="active_group_list_empty_reminder">No group could be joined by now</string>
    <string name="group_owner_label">Owner:</string>
    <string name="create_group_name_label">Group Name</string>
    <string name="choosing_restaurant_list_label">All Restaurants</string>
    <string name="select_other_restaurant_button_label">Select Other Restaurant</string>
    <string name="due_time_label">Due Time</string>
    <string name="create_confirm_button_label">Create</string>

    <string name="input_error_group_name_is_null">Group name should not be null!</string>
    <string name="loading_restaurants_fail">Fail to load restaurants</string>
    <string name="group_list_menu_item_recharge">Recharge</string>
    <string name="group_total_cost_label">Total Cost</string>
    <string name="group_info_label_name">Name</string>
    <string name="group_info_label_owner">Owner</string>
    <string name="group_info_label_telephone">Telelphone</string>
    <string name="group_info_restaurant_label_name">Restaurant Name</string>
    <string name="group_info_restaurant_label_telephone">Telephone</string>
    <string name="group_info_restaurant_label_address">Address</string>
    <string name="group_info_restaurant_label_desc">Desc</string>
    <string name="group_myself_title">My Order</string>
    <string name="group_myself_tab_label">My Order</string>
    <string name="group_member_title">Our Member</string>
    <string name="group_member_tab_label">Member Info</string>
    <string name="group_tab_order">Order</string>
    <string name="order_create_confirm_btn_label">Create</string>
    <string name="bill_unpaid_label">Get my money back</string>
    <string name="bill_payback_label">Pay</string>
    <string name="bill_payback_no_content">No bill need to be paid</string>
    <string name="bill_unpaid_no_content">No one owe me!</string>
    <string name="bill_reminder_button_label">Get my money back</string>
    <string name="logout_label">Logout</string>
    <string name="group_create_title">Create Group</string>
    <string name="signal_yuan">&#165;</string>
    <string name="dish_choosing_noting_message">No dish is selected</string>
    <string name="group_info_telephone_empty">No Value</string>
    <string name="group_analysis_no_content">No Orders</string>
    <string name="group_myself_no_content">Current user didn\'t order.</string>
    <string name="group_member_no_content">No other people order.</string>
    <string name="delete_button_label">Delete</string>
    <string name="login_button_label">Log In</string>
    <string name="login_page_register_button_label">Register</string>
    <string name="register_username_lable">Username</string>
    <string name="register_email_label">Email Address</string>
    <string name="register_phone_number_label">Phone Number</string>
    <string name="register_password_label">Password</string>
    <string name="register_password_confirm_label">Input password again</string>
    <string name="input_empty_message"> should not be empty</string>
    <string name="register_password_not_same_message">Input different password</string>
    <string name="register_title">Register</string>
    <string name="login_username_label">Username/Email</string>
    <string name="login_password_label">password</string>
    <string name="bill_title">My Bills</string>
    <string name="group_info_label_due_date">Due DateTime</string>
    <string name="register_password_is_short">Password should be longer than 8</string>
</resources>
