<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="30dp"
              android:paddingRight="30dp"
              android:paddingTop="50dp">


    <EditText android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:id="@+id/username"
              android:hint="@string/login_username_label"
              android:inputType="textEmailAddress"
              android:lines="1"/>
    <EditText android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:layout_marginTop="10dp"
              android:inputType="textPassword"
              android:id="@+id/password"
              android:hint="@string/login_password_label"
              android:layout_gravity="center_horizontal|bottom"
              android:lines="1"/>
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/login_Button"
            android:text="@string/login_button_label"
            android:onClick="login"/>

    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/login_Button"
            android:text="@string/login_page_register_button_label"
            android:onClick="goToRegister"/>


</LinearLayout>
